--- a/frontend/src/i18n/locales/zh-CN.json
+++ b/frontend/src/i18n/locales/zh-CN.json
@@ -348,7 +348,8 @@
       "same-addr-as-wallet": "与连接的钱包地址相同",
       "same-addr-as-stealth": "与隐形地址相同",
       "address-it-resolves-to": "它解析为的地址",
-      "has-poap-tokens": "具有 POAP 令牌"
+      "has-poap-tokens": "具有 POAP 令牌",
+      "gitcoin-contributor": "是Gitcoin的贡献者"
     },
     "Dialog": {
       "warning": "警告！"
