--- a/frontend/src/i18n/locales/zh-CN.json
+++ b/frontend/src/i18n/locales/zh-CN.json
@@ -302,7 +302,7 @@
   },
   "AccountSent": {
     "connect-wallet": "连接钱包",
-    "connect-your-wallet": "连接您的钱包以发送资金",
+    "connect-your-wallet": "连接您的钱包以查看已发送的资金",
     "need-signature": "此应用程序需要您的签名才能解密本地存储的发送历史记录",
     "sign": "标志"
   },
