--- a/frontend/src/i18n/locales/en-US.json
+++ b/frontend/src/i18n/locales/en-US.json
@@ -12,11 +12,12 @@
       "send-first": "Get the address, ENS, or CNS name of the person you're sending funds to",
       "send-second": "Complete the form on the <span class=\"text-bold\">Send</span> page"
     },
-    "banner-donate": "Umbra is part of Gitcoin's Alpha matching round. Please consider {supporting} development. {LearnMore}",
+    "banner-donate": "Please consider supporting Umbra's {DevelopmentGrant} in the Gitcoin matching round. {LearnMore}",
     "banner-passport": "If you gave to Umbra during the Gitcoin round, you must {configurePassport} to qualify for matching. {LearnMore}",
     "supporting": "supporting",
     "configure-passport": "configure passport",
-    "learn-more": "Learn More."
+    "learn-more": "Learn More.",
+    "development-grant": "development grant"
   },
   "Home-action-card": {
     "send": "Send",
