--- a/frontend/src/i18n/locales/zh-CN.json
+++ b/frontend/src/i18n/locales/zh-CN.json
@@ -303,13 +303,13 @@
   "AccountSentTable": {
     "address": "收款人地址",
     "account-empty": "此浏览器中未发送任何资金",
-    "advanced-mode-on": "高级模式已开启",
+    "advanced-mode-on": "在启用高级模式的情况下发送",
     "amount": "金额",
     "date-sent": "发送日期",
     "receiver": "收款人",
     "sent-funds": "已发送的资金",
     "storage-description": "发送历史记录是当前浏览器的本地发送历史记录，从其他浏览器或不同设备访问时会有所不同。我们这样做是为了最大限度地提高您的安全和隐私。",
-    "use-public-key-checked": "已选中使用公钥"
+    "use-public-key-checked": "使用收件人的标准公钥发送"
   },
 
   "AccountSent": {
