--- a/frontend/src/i18n/locales/zh-CN.json
+++ b/frontend/src/i18n/locales/zh-CN.json
@@ -162,7 +162,7 @@
     "payment-links": "什么是支付链接？",
     "payment-links-answer": " <p> 在发送页面上，填写部分或全部发送表单，然后单击<span class=\"text-italic\">复制付款链接</span>按钮。这会将 URL 复制到剪贴板，当访问该剪贴板时，会使用 URL 中的值预先填充发送表单。 </p> <p> 指定金额作为付款链接的一部分时要小心，因为它会降低隐私。例如，如果您分享了一个支付链接，人们可以向您捐赠 100 DAI，突然间大量 100 DAI 开始通过 Umbra，观察者就会知道这些转账很可能是属于您的。 </p>",
     "send-history-different-devices": "为什么我无法在不同的设备上看到我的发送历史记录？",
-    "send-history-different-devices-answer": "<p>在链上，您的发送交易的接收者是无法识别的。这是设计使然，也是 Umbra 的重点——接收地址是一个隐形地址。因此，无法通过观察链历史记录来跨设备同步发送历史记录。</p><p>相反，您的发送历史记录是加密的并存储在浏览器的本地存储中。它永远不会离开您的设备，因此无法在其他设备上看到。此外，在 2023 年 5 月将此功能添加到 Umbra 应用程序之前发送的交易不会存储在任何设备上。</p>",
+    "send-history-different-devices-answer": "<p>在链上，您的发送交易的接收者是无法被识别的。这是设计使然，也是 Umbra 的重点——收款地址是一个隐形地址。因此，没有办法通过观察链历史记录来跨设备记录发送历史。</p><p>相反，您的发送历史记录是被加密并存储在浏览器的本地存储中。发送记录无法离开您的设备，因此无法在其他设备上看到。此外，在 2023 年 5 月将此功能添加到 Umbra 应用程序之前发送的交易不会存储在任何设备上。</p>",
     "receiving-funds": "收款",
     "safe-address": "提取资金到哪些地址是安全的？",
     "safe-address-answer": "<p> 我们建议以保护隐私的方式取款3 种方式。请注意，每个都有自己的权衡取舍。 </p> <ol> <li> 提取到与您的身份没有公开关联的地址（权衡：发件人现在可以推断您控制该地址） </li> <li> 生成一个新地址并提取到该地址（权衡：如果您收到了代币，则必须先用 ETH 为该地址注资，然后才能使用它们） </li> <li> 提取到交易所地址（权衡：如果你取款到 Coinbase，那么 Coinbase 会知道谁给您发了资金） </li> </ol>",
@@ -305,7 +305,7 @@
   "AccountSentTable": {
     "address": "收款人地址",
     "account-empty": "此浏览器中未发送任何资金",
-    "advanced-mode-on": "在启用高级模式的情况下发送",
+    "advanced-mode-on": "有启用高级模式发送",
     "amount": "金额",
     "date-sent": "发送日期",
     "learn-more": "了解更多信息",
@@ -313,12 +313,12 @@
     "sent-funds": "已发送的资金",
     "storage-description": "发送历史记录是当前浏览器的本地发送历史记录，从其他浏览器或不同设备访问时会有所不同。我们这样做是为了最大限度地提高您的安全和隐私。",
     "stored-on-device": "发送历史记录仅本地存储在此设备上",
-    "use-public-key-checked": "使用收件人的标准公钥发送"
+    "use-public-key-checked": "使用收款人的标准公钥发送"
   },
 
   "AccountSent": {
     "connect-wallet": "连接钱包",
-    "connect-your-wallet": "连接您的钱包以查看已发送的资金",
+    "connect-your-wallet": "连接您的钱包来查看已发送的资金",
     "need-signature": "此应用程序需要您的签名才能解密本地存储的发送历史记录",
     "sign": "标志"
   },
