--- a/frontend/src/i18n/locales/en-US.json
+++ b/frontend/src/i18n/locales/en-US.json
@@ -160,6 +160,8 @@
     "umbra-fee-answer": "<p> Finding funds you've received through Umbra requires scanning through all sent transactions, then checking each to find which ones are for you. </p> <p> On networks with very cheap transaction fees, the Umbra contract charges a small <span class=\"code\">toll</span> when sending funds to deter spam transactions, as spam would make it more difficult to scan through all sent transactions. </p>",
     "payment-links": "What are the payment links?",
     "payment-links-answer": " <p> When on the Send page, fill out some or all of the Send form and click the <span class=\"text-italic\">Copy payment link</span> button. This will copy a URL to your clipboard that, when visited, pre-populates the send form with the values in the URL. </p> <p> Be careful when specifying an amount as part of your payment link, as it can reduce privacy. For example, if you share a payment link so people can donate 100 DAI to you, and suddenly lots of 100 DAI sends start going through Umbra, observers will know that it's very likely those transfers are to you. </p>",
+    "send-history-different-devices": "Why can't I see my send history on different devices?",
+    "send-history-different-devices-answer": "<p>On chain, the recipient of your sending transactions is not discernable. This is by design, and it is the point of Umbra—the receiving address is a stealth address. As a result, it's not possible to sync your send history across devices by observing on chain history.</p><p>Instead, your send history is encrypted and stored in your browser's local storage. It never leaves your device, and can't be seen on other devices as a result. Furthermore, transactions sent before this feature was added to the Umbra app in May 2023 are not stored on any device.</p>",
     "receiving-funds": "Receiving Funds",
     "safe-address": "What addresses are safe for withdrawing funds to?",
     "safe-address-answer": "<p> We suggest 3 ways of withdrawing in a privacy-preserving way. Note that each comes with its own set of tradeoffs. </p> <ol> <li> Withdraw to an address that is not publicly associated with your identity (tradeoff: the sender will now be able to infer you control that address) </li> <li> Generate a new address and withdraw into that (tradeoff: if you’ve received tokens, you’ll have to fund that address with ETH for gas before you can use them) </li> <li> Withdraw to an exchange address (tradeoff: if you withdraw to Coinbase, then Coinbase will know who sent you funds) </li> </ol>",
@@ -299,9 +301,26 @@
     "sent-funds": "Sent funds",
     "storage-description": "The send history is local to your current browser and will differ when accessed from a different browser or a different device. We do this to maximize your security and privacy."
   },
+  "AccountSentTable": {
+    "address": "Recipient address",
+    "account-empty": "No funds sent in this browser",
+    "advanced-mode-on": "Sent with advanced mode enabled",
+    "amount": "Amount",
+    "date-sent": "Date sent",
+    "learn-more": "Learn more",
+    "receiver": "Receiver",
+    "sent-funds": "Sent funds",
+    "storage-description": "The send history is local to your current browser and will differ when accessed from a different browser or a different device. We do this to maximize your security and privacy.",
+    "stored-on-device": "Send history is only stored locally on this device",
+    "use-public-key-checked": "Sent using recipient's standard public key"
+  },
   "AccountSent": {
     "connect-wallet": "Connect Wallet",
-    "connect-your-wallet": "Connect your wallet to send funds"
+    "connect-your-wallet": "Connect your wallet to view sent funds",
+    "fetching-send-history": "Fetching send history...",
+
+    "need-signature": "This app needs your signature to decrypt your locally stored send history",
+    "sign": "Sign"
   },
   "ConnectWalletCard": {
     "connect-wallet": "Connect Wallet"
