Batch send frontend (#491)
* Add BatchSend page with working amount validation and token commit.
Address other nits

Remove unused vars

Add table style

Add remove button

Import type and remove unused vars

Add working toll summary

Rename files

Fix summary styling

Cleanup

Fix build warnings

Default to chain native token

Don't allow user to delete first row

Add card layout on mobile

Combine Send and BatchSend page init

Combine Send and BatchSend page done

Feature flag batchSend everywhere except goerli

Remove standalone batchSend page

Add i18n translations

Dedupe isValidTokenAmount

Remove unused vars

Update i18n values

Add delete icon

Match mobile batch send style with Send page and add spacing between cards

Remove tab options when batch send isn't supported

Use smaller numbers in desktop view

Move tabs under title and make them closer

Make desktop view input styles uniform

Fix toll summary and removeField

Fix falky feature flag batchSendIsSupported

Remove gold outline for real

Make batchSend numbering smaller and grey

Fix dark mode container color

Fix copy icon margins and add iconMargin prop

Add isValidAmount check

Update batchSend address

Update Umbra.test.ts

Disblae switching tabs, adding and removing fields while tx is pending

Reset batchSend form after send
- Disable send when one row
- Dont reset default token

Update resetForm to fix disabled Single Send button after batchSend tx

Cleanup

* Disable add and remove field buttons

* Fix import path and export SendBatch in index.ts

* Rename SendData type to BatchSendData

* Rename Sends to batchSends

* Use .toNumber instead of casting to Number()

* Shorten tokenToUse

* Add i18n translations for errors

* Re-fetch token balances

* Remove duplicate check batchSendIsSupported in setPaymentLinkData

* Remove extra space

* Add else if

* Update resetForm

* Use Promise.all

--- a/frontend/src/i18n/locales/en-US.json
+++ b/frontend/src/i18n/locales/en-US.json
@@ -61,6 +61,9 @@
   "Send": {
     "sending-disabled": "Sending via Umbra has been temporarily disabled while we perform system maintenance. Please check back soon!",
     "send": "Send",
+    "single-send": "Single Send",
+    "batch-send": "Batch Send",
+    "coming-soon": "Coming soon!",
     "connect-your-wallet": "Connect your wallet to send funds",
     "connect-wallet": "Connect Wallet",
     "recipient": "Recipient's ENS name or address",
@@ -71,7 +74,7 @@
     "select-token": "Select token to send",
     "slippage-exceeded": "Actual send amount would materially differ from the estimate due to changing gas prices. Please try again.",
     "token": "Token",
-    "amount": "Amount to send",
+    "amount": "Amount",
     "summary": "Summary",
     "sending": "Sending",
     "fee": "Umbra Fee",
@@ -83,6 +86,7 @@
     "enter-an-amount": "Please enter an amount",
     "enter-a-recipient": "Please enter a recipient",
     "select-a-token": "Please select a token",
+    "select-a-token-for-send": "Please select a token for send",
     "send-at-least": "Please send at least",
     "amount-exceeds-balance": "Amount exceeds wallet balance",
     "please-complete-form": "Please complete the form",
@@ -90,7 +94,9 @@
     "umbra-fee-exceeds-balance": "required for Umbra fee exceeds wallet balance",
     "advanced-send-warning": "The receiver will have to enter their account's private key into this app to withdraw the funds. Don't use this feature unless you know what you're doing.",
     "acknowledge-risks": "I acknowledge the risks",
-    "send-history": "Send history"
+    "send-history": "Send history",
+    "add-send": "+ Add Send",
+    "receiver-addr-ens": "Receiver's address or ENS name"
   },
   "Receive": {
     "receive": "Receive",
