--- a/frontend/src/i18n/locales/zh-CN.json
+++ b/frontend/src/i18n/locales/zh-CN.json
@@ -312,6 +312,7 @@
     "account-empty": "此浏览器中未发送任何资金",
     "advanced-mode-on": "有启用高级模式发送",
     "amount": "金额",
+    "clear-history-warning": "此操作无法撤消！您的加密发送历史记录仅存储在发送交易的本地设备上，一旦清除就无法恢复。您确定要继续吗？",
     "date-sent": "发送日期",
     "learn-more": "了解更多信息",
     "receiver": "收款人",
