init - Update frotnend - Only sort announcementsBatch - Fetch annoucements by timestamp - Remove sorting from working, sorting on frontend instead - Refresh receive table when new userAnnouncements are found - Scan announcements in 2 batches - Update fetchSomeAnnouncements to asyncGenerator fn - Add async to await for workers before creating new ones - Keep fetching announcements after first scan starts - Update fetching/scanning status w/ i18n (#573) - Handle advanced mode case - Fix CI - Don't always yield announcements from logs - Fix typo - Add loading status when there's userAnnouncements and the last scan is still processing

--- a/frontend/src/i18n/locales/en-US.json
+++ b/frontend/src/i18n/locales/en-US.json
@@ -114,8 +114,10 @@
     "end-block": "End block",
     "enter-prv-key": "Enter the private key to use when scanning for events. A blank private key will use the ones generated from your signature.",
     "prv-key": "Private key",
-    "fetching": "Fetching announcements...",
-    "scanning": "Scanning for funds...",
+    "fetching": "Fetching all announcements...",
+    "fetching-latest": "Fetching latest 10,000 announcements...",
+    "scanning": "Scanning all announcements for funds...",
+    "scanning-latest": "Scanning latest announcements for funds...",
     "wait": "This may take a couple of minutes depending on your connection and device. This is normal&mdash; please be patient."
   },
   "Setup": {
