--- a/frontend/src/i18n/locales/zh-CN.json
+++ b/frontend/src/i18n/locales/zh-CN.json
@@ -114,8 +114,10 @@
     "end-block": "结束块",
     "enter-prv-key": "输入扫描事件时要使用的私钥。空白私钥将使用从您的签名生成的私钥。",
     "prv-key": "私钥",
-    "fetching": "在获取公告...",
-    "scanning": "在扫描资金...",
+    "fetching": "在获取所有的公告...",
+    "fetching-latest": "在获取最新的 10，000 条公告...",
+    "scanning": "在所有的公告中扫描资金...",
+    "scanning-latest": "在最新公告中扫描资金...",
     "wait": "这可能需要几分钟，具体取决于您的连接和设备。这是正常的 — 请耐心等待。"
   },
   "Setup": {
