--- a/frontend/src/i18n/locales/zh-CN.json
+++ b/frontend/src/i18n/locales/zh-CN.json
@@ -43,7 +43,9 @@
     "off": "关",
     "about": "简介",
     "built-by": "{0} 项目",
-    "links": "更多"
+    "links": "更多",
+    "send-history": "发送历史记录",
+    "send-history-description": "允许在浏览器中本地保存发送历史记录，并在发送页面上查看。"
   },
   "Address-Settings": {
     "advanced-mode-on": "高级模式已开启"
