--- a/frontend/src/i18n/locales/en-US.json
+++ b/frontend/src/i18n/locales/en-US.json
@@ -119,7 +119,8 @@
     "fetching-latest": "Fetching latest 10,000 announcements...",
     "scanning": "Scanning all announcements for funds...",
     "scanning-latest": "Scanning latest announcements for funds...",
-    "wait": "This may take a couple of minutes depending on your connection and device. This is normal&mdash; please be patient."
+    "wait": "This may take a couple of minutes depending on your connection and device. This is normal&mdash; please be patient.",
+    "stop": "Stop"
   },
   "Setup": {
     "setup": "Setup",
