feat: fetching latest from last fetched block component

--- a/frontend/src/i18n/locales/en-US.json
+++ b/frontend/src/i18n/locales/en-US.json
@@ -118,6 +118,7 @@
     "prv-key": "Private key",
     "fetching": "Fetching all announcements...",
     "fetching-latest": "Fetching latest 10,000 announcements...",
+    "fetching-latest-from-last-fetched-block": "Fetching latest announcements...",
     "scanning": "Scanning all announcements for funds...",
     "scanning-latest": "Scanning latest announcements for funds...",
     "wait": "This may take a couple of minutes depending on your connection and device. This is normal&mdash; please be patient.",
