--- a/frontend/src/i18n/locales/zh-CN.json
+++ b/frontend/src/i18n/locales/zh-CN.json
@@ -33,6 +33,8 @@
     "contact": "联系"
   },
   "Base-Layout": {
+    "clear-local-storage": "清除本地存储",
+    "clear-local-storage-description": "清除所有本地存储数据，包括发送历史记录和钱包连接信息。",
     "connect-wallet": "连接钱包",
     "settings": "设置",
     "dark-mode": "深色模式",
