--- a/frontend/src/i18n/locales/en-US.json
+++ b/frontend/src/i18n/locales/en-US.json
@@ -107,7 +107,7 @@
     "receive": "Receive",
     "connect-your-wallet": "Connect your wallet to scan for received funds",
     "connect-wallet": "Connect Wallet",
-    "need-signature-lately": "Sign to scan for recently received funds or to withdraw funds",
+    "need-signature-lately": "Sign to scan for recently received funds",
     "need-signature": "This app needs your signature to scan for funds you've received",
     "scan-funds": "Click below to scan for funds you've received",
     "sign": "Sign",
