--- a/frontend/src/i18n/locales/en-US.json
+++ b/frontend/src/i18n/locales/en-US.json
@@ -34,7 +34,7 @@
   },
   "Base-Layout": {
     "clear-local-storage": "Clear local storage",
-    "clear-local-storage-description": "Clears all local storage data, including send history, and wallet connection.",
+    "clear-local-storage-description": "Clears all local storage data, including send history, announcements, and wallet connection.",
     "connect-wallet": "Connect Wallet",
     "settings": "Settings",
     "dark-mode": "Dark mode",
