--- a/frontend/src/i18n/locales/en-US.json
+++ b/frontend/src/i18n/locales/en-US.json
@@ -358,7 +358,7 @@
     "view-on-explorer": "View on explorer"
   },
   "WithdrawForm": {
-    "need-signature": "Need Signature",
+    "need-signature": "Sign",
     "withdraw-address": "Enter address to withdraw funds to",
     "address": "Address",
     "fetching-fee-estimate": "Fetching fee estimate...",
