Remove gnosis chain support

--- a/frontend/src/i18n/locales/zh-CN.json
+++ b/frontend/src/i18n/locales/zh-CN.json
@@ -210,8 +210,8 @@
     "crypto-js-answer-rest": "</p> <p> 然而，以太坊生态系统有许多依赖 JavaScript 密码术的钱包和应用程序，到目前为止还没有因此而出现重大问题，因此这种方法对于大多数用户来说可能是一个合适的折衷方案。 </p>",
     "tech-details": "技术细节",
     "network-addrs": "Umbra 部署在哪些网络上以及合约地址是什么？",
-    "network-addrs-core": "核心 {umbra} 合约部署在 {umbraAddr} {mainnet}, {sepolia}, {optimism}, {polygon}, {gnosis} 和 {arbitrum}",
-    "network-addrs-registry": "{stealthRegistry} 部署在 {stealthRegistryAddr} {mainnet}, {sepolia}, {optimism}, {polygon}, {gnosis} 和 {arbitrum}",
+    "network-addrs-core": "核心 {umbra} 合约部署在 {umbraAddr} {mainnet}, {sepolia}, {optimism}, {polygon} 和 {arbitrum}",
+    "network-addrs-registry": "{stealthRegistry} 部署在 {stealthRegistryAddr} {mainnet}, {sepolia}, {optimism}, {polygon} 和 {arbitrum}",
     "how-it-works": "它是如何工作的？",
     "how-it-works-answer": "<p class=\"text-bold\">隐形地址概述</p> <p>让我们从 Umbra 协议的工作原理（更一般地说，隐身地址的工作原理）开始：</p> <p> 接收者拥有公钥 <span class=\"code\">P</span> 和私钥 <span class=\"code\">p</span>。 发送者生成一个随机数 <span class=\"code\">r</span>，并使用椭圆曲线乘法计算隐身公钥为  <span class=\"code\">P_stealth = P * r</span> 。 发件人从该公钥中派生出以太坊地址 <span class=\"code\">a_stealth</span> ，并向其发送资金。由于椭圆曲线数学的魔力，接收者可以通过计算 <span class=\"code\">p_stealth</span> 生成访问 <span class=\"code\">a_stealth</span> 资金所需的私钥 <span class=\"code\">p_stealth = p * r</span>. </p> <p> 首先要解决的问题是发送方如何将值 <span class=\"code\">r</span> 传递给接收方？如果 <span class=\"code\">r</span> 是公开的，观察者可以通过计算 <span class=\"code\">P * r</span> 来确定向谁发送了各种已发布的 <span class=\"code\">P</span> 值，直到找到隐身地址。所以 <span class=\"code\">r</span> 需要加密。 </p>",
     "how-it-works-answer-ECDH": "加密完成 {ECDH} (ECDH)，这意味着发送者使用接收者的公钥来加密随机数。加密的随机数会给我们密文 {c}。加密的随机数 {c} 和隐身地址 {aStealth} {announcement} 发出。ECDH 要求发送方生成用于加密的临时私钥，因此接收方需要解密的临时公钥 {PEphemeral} 也会在此事件中发出。",
